chore: refactor and styling

--- a/Day5/index.html
+++ b/Day5/index.html
@@ -4,17 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap"
-            rel="stylesheet"
-        />
         <link rel="stylesheet" href="styles.css" />
         <title>Candy Sale</title>
     </head>
     <body>
-        <main>
-            <h1>CANDY SALE</h1>
-        </main>
+        <h1>🎄Stocking stuffers🎄</h1>
         <script type="module" src="app.js"></script>
     </body>
 </html>
