feat: added button to refresh page as extra

--- a/Day6/index.html
+++ b/Day6/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Taco Tuesday</title>
-</head>
-<body>
-    <h1>TACO TUESDAY</h1>
-    <section id="tray"></section>
-    <script src="app.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Taco Tuesday</title>
+    </head>
+    <body>
+        <div class="container">
+            <h1>TACO TUESDAY</h1>
+            <section id="tray"></section>
+            <button id="refreshButton">Refresh Page</button>
+        </div>
+        <script src="app.js"></script>
+    </body>
 </html>
