chore: fixed some styling but not finished + readme

--- a/Day7/index.html
+++ b/Day7/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Alternatinv Caps</title>
-</head>
-<body>
-    <script src="app.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Alternatinve Caps</title>
+    </head>
+    <body>
+        <form id="form">
+            <h1>Sentence generator:</h1>
+            <label for="sentence">Enter a sentence:</label><br />
+            <input type="text" id="sentence" name="sentence" /><br />
+            <button type="submit">Generate</button>
+        </form>
+        <script src="app.js"></script>
+    </body>
 </html>
