chore: rehaul of day 11 that i worked on on the side.

--- a/Day11/index.html
+++ b/Day11/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Alien Message</title>
-</head>
-<body>
-    <!-- ELEMENTS AND A STYLE WILL GO HERE WHEN I HAVE SOME TIME -->
-    <script src="app.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Alien Message</title>
+    </head>
+    <body>
+        <main>
+            <div class="hero">
+                <h1>The aliens say...</h1>
+                <ul id="messages">
+                    <!-- array of messages rendered in JS-->
+                </ul>
+                <button type="submit" id="translate-btn">
+                    Translate alien messages
+                </button>
+            </div>
+            <div class="hero-img"></div>
+        </main>
+        <script src="app.js"></script>
+    </body>
 </html>
