--- a/Day12/index.html
+++ b/Day12/index.html
@@ -9,10 +9,12 @@
     </head>
     <body>
         <h2>Menu</h2>
-        <section id="menu">
-            <div class="food">🥐</div>
-            <div class="food">🥚</div>
-            <div class="food">☕️</div>
+        <section class="tablecloth">
+            <div id="menu">
+                <div class="food">🥐</div>
+                <div class="food">🥚</div>
+                <div class="food">☕️</div>
+            </div>
         </section>
         <script src="app.js"></script>
     </body>
