--- a/Day15/index.html
+++ b/Day15/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
         <title>Palindrome Checker</title>
     </head>
     <body>
@@ -11,7 +12,7 @@
         <form>
             <label for="word">Enter a word:</label><br />
             <input type="text" id="word" name="word" /><br /><br />
-            <input type="submit" value="Check" />
+            <input class="button" type="submit" value="Check" />
         </form>
         <p id="result"></p>
 
